# sensor_study_trial_tracker

./: .env.example  .gitignore  DEPLOY_RAILWAY.md  Procfile  README.md  pyproject.toml  railway.cron.json  requirements.txt
scripts/: export_railway_secrets.py  run_daily.py  run_ingestion.py  run_reminders.py  run_web.ps1  setup_gmail_oauth.py
tests/: __init__.py  conftest.py  test_tracker.py
tracker/: __init__.py  config.py  db.py  env.py  gmail_secrets.py
tracker/engine/: __init__.py  actions.py  reminder.py
tracker/ingestion/: __init__.py  gmail_client.py  parsers.py  run.py
tracker/static/js/: table_sort.js
tracker/templates/: _outcome_actions.html  _participants_table.html  _table_sort_assets.html  index.html  outcomes.html
tracker/web/: app.py
