[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "participant-touchpoint-tracker"
version = "0.1.0"
description = "Extensible participant touchpoint tracker for multi-step study workflows"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
